RESOLVED FIXED220963
[LFC][IFC] ASSERT(constraints.left->x <= constraints.right->x) when left and right floats run out of space
https://bugs.webkit.org/show_bug.cgi?id=220963
Summary [LFC][IFC] ASSERT(constraints.left->x <= constraints.right->x) when left and ...
Simon Fraser (smfr)
Reported 2021-01-25 20:47:47 PST
Created attachment 418368 [details] Testcase Attached testcase hits an assertion when the window width is not wide enough for the floats to be side-by-side.
Attachments
Testcase (2.78 KB, text/html)
2021-01-25 20:47 PST, Simon Fraser (smfr)
no flags
Patch (4.35 KB, patch)
2021-02-07 11:10 PST, alan
no flags
Patch (4.35 KB, patch)
2021-02-07 13:14 PST, alan
no flags
Patch (4.35 KB, patch)
2021-02-07 17:03 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2021-02-01 20:48:31 PST
alan
Comment 2 2021-02-07 11:10:53 PST
Simon Fraser (smfr)
Comment 3 2021-02-07 12:43:48 PST
Comment on attachment 419542 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=419542&action=review > Source/WebCore/ChangeLog:20 > + and as we try to find space for the inline content, we may end up with a vertical rage (candidate line position + line height) vertical rage
alan
Comment 4 2021-02-07 13:10:35 PST
(In reply to Simon Fraser (smfr) from comment #3) > Comment on attachment 419542 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=419542&action=review > > > Source/WebCore/ChangeLog:20 > > + and as we try to find space for the inline content, we may end up with a vertical rage (candidate line position + line height) > > vertical rage floats can actually cause vertical rage.
alan
Comment 5 2021-02-07 13:14:50 PST
EWS
Comment 6 2021-02-07 13:16:19 PST
ChangeLog entry in LayoutTests/ChangeLog contains OOPS!.
alan
Comment 7 2021-02-07 17:03:03 PST
EWS
Comment 8 2021-02-07 18:11:48 PST
Committed r272478: <https://commits.webkit.org/r272478> All reviewed patches have been landed. Closing bug and clearing flags on attachment 419550 [details].
Note You need to log in before you can comment on or make changes to this bug.