[LFC][IFC] ASSERT(constraints.left->x <= constraints.right->x) when left and right floats run out of space https://bugs.webkit.org/show_bug.cgi?id=220963 <rdar://problem/73861675>

Reviewed by Simon Fraser.

Source/WebCore:

Remove the incorrect assert. It's valid to have "horizontally overlapping" floats here since
we probe for a vertical range (not just a point) and vertical ranges can have
multiple left and right floats where they simply "overlap" each other when only x is taken into account.

When two floats (left and right) line up like this:
 _______
|  LF   |
|_______|
     _______
    |  RF   |
    |_______|
and as we try to find space for the inline content, we may end up with a vertical range (candidate line position + line height)
where we find both LF and RF. In this range the float boxes do overlap horizontally.
It simply means that at that vertical position there's no available space for the inline content.

Test: fast/inline/intrusive-left-right-floats-assert.html

* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::floatConstraints const):

LayoutTests:

* fast/inline/intrusive-left-right-floats-assert-expected.txt: Added.
* fast/inline/intrusive-left-right-floats-assert.html: Added.


Canonical link: https://commits.webkit.org/233792@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272478 268f45cc-cd09-0410-ab3c-d52691b4dbfc